<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="Manual" Id="{0ada9505-5641-4978-b97a-e28652d1bb28}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK Manual
VAR
	Counter: CTUD;
	MotorTable: Motor;
	MotorBelt: Motor;
	Backwards: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[Counter();

gvl.PistonInputBackwards := TRUE;
gvl.PistonInputForward := FALSE;

gvl.MotorTableMove := FALSE;

gvl.PistonPress := FALSE;

gvl.PistonOutputBackwards := TRUE;
gvl.PistonOutputForward := FALSE;

gvl.MotorBeltMove := FALSE;
IF (gvl.ButtonBLT AND Counter.CV > 0) THEN
	Counter.CD := TRUE;
ELSE
	Counter.CD := FALSE;
END_IF


IF (gvl.ButtonBRT AND Counter.CV < 4) THEN
	Counter.CU := TRUE;
ELSE
	Counter.CU := FALSE;
END_IF

IF Counter.CV = 0 THEN
	IF gvl.ButtonBLB THEN
		gvl.PistonInputBackwards := FALSE;
		gvl.PistonInputForward := TRUE;
	ELSE
		gvl.PistonInputBackwards := TRUE;
		gvl.PistonInputForward := FALSE;
	END_IF
	
ELSIF Counter.CV = 1 THEN
	MotorTable(
		Forwards := gvl.ButtonBRB,
		Backwards := gvl.ButtonBLB,
		blockTime := T#0.5S,
		Active => gvl.MotorTableMove,
		Direction => gvl.MotorTableDirection
	);	
	
ELSIF Counter.CV = 2 THEN
	IF gvl.ButtonBLB THEN
		gvl.PistonPress := TRUE;
	ELSE
		gvl.PistonPress := FALSE;
	END_IF
	
ELSIF Counter.CV = 3 THEN
	IF gvl.ButtonBLB THEN
		gvl.PistonOutputBackwards := FALSE;
		gvl.PistonOutputForward := TRUE;
	ELSE
		gvl.PistonOutputBackwards := TRUE;
		gvl.PistonOutputForward := FALSE;
	END_IF
	
ELSIF Counter.CV = 4 THEN
	MotorBelt(
		Forwards := gvl.ButtonBRB,
		Backwards := gvl.ButtonBLB,
		blockTime := T#0.5S,
		Active => gvl.MotorBeltMove,
		Direction => gvl.MotorBeltDirection
	);
END_IF]]></ST>
    </Implementation>
    <LineIds Name="Manual">
      <LineId Id="121" Count="0" />
      <LineId Id="390" Count="0" />
      <LineId Id="383" Count="0" />
      <LineId Id="382" Count="0" />
      <LineId Id="384" Count="0" />
      <LineId Id="371" Count="0" />
      <LineId Id="378" Count="1" />
      <LineId Id="388" Count="0" />
      <LineId Id="381" Count="0" />
      <LineId Id="380" Count="0" />
      <LineId Id="387" Count="0" />
      <LineId Id="386" Count="0" />
      <LineId Id="95" Count="0" />
      <LineId Id="126" Count="0" />
      <LineId Id="148" Count="0" />
      <LineId Id="145" Count="0" />
      <LineId Id="127" Count="0" />
      <LineId Id="135" Count="2" />
      <LineId Id="139" Count="0" />
      <LineId Id="147" Count="0" />
      <LineId Id="146" Count="0" />
      <LineId Id="144" Count="0" />
      <LineId Id="149" Count="0" />
      <LineId Id="134" Count="0" />
      <LineId Id="189" Count="1" />
      <LineId Id="192" Count="0" />
      <LineId Id="191" Count="0" />
      <LineId Id="193" Count="0" />
      <LineId Id="195" Count="0" />
      <LineId Id="194" Count="0" />
      <LineId Id="154" Count="0" />
      <LineId Id="150" Count="0" />
      <LineId Id="157" Count="0" />
      <LineId Id="159" Count="4" />
      <LineId Id="156" Count="0" />
      <LineId Id="185" Count="1" />
      <LineId Id="196" Count="1" />
      <LineId Id="199" Count="1" />
      <LineId Id="187" Count="0" />
      <LineId Id="204" Count="0" />
      <LineId Id="202" Count="0" />
      <LineId Id="205" Count="1" />
      <LineId Id="219" Count="0" />
      <LineId Id="208" Count="1" />
      <LineId Id="218" Count="0" />
      <LineId Id="203" Count="0" />
      <LineId Id="211" Count="0" />
      <LineId Id="171" Count="0" />
      <LineId Id="173" Count="0" />
      <LineId Id="175" Count="1" />
      <LineId Id="181" Count="0" />
      <LineId Id="178" Count="1" />
      <LineId Id="172" Count="0" />
      <LineId Id="153" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>